# dpg-layout

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: box.h  box_helper.h  common.h  constrainable.h  constraint_helper.h  geometry.h  layout_helpers.h  linear_box_helper.h  sequence_helper.h  spacers.h  strength.h  utils.h
src/: box.cpp  box_helper.cpp  constrainable.cpp  constraint_helper.cpp  main.cpp  spacers.cpp  strength.cpp
